<?xml version="1.0"?>
<package>
  <name>scitos_mira</name>
  <version>0.2.0</version>
  <description>Driver for Scitos-G5 using the MIRA framework.</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  
  <author email="marc@hanheide.net">Marc Hanheide</author>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  <author email="tkrajnik@lincoln.ac.uk">Tom Krajnik</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>scitos_msgs</build_depend>
  <build_depend>mira-scitos</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>mira-scitos</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
